# hh-

coursework_5-main/: README.md  config.py  kickstart.py  main.py  pyproject.toml
coursework_5-main/scripts/: create_database.sql
coursework_5-main/src/abstractions/: currency_provider.py  db_creator.py  db_manager_abstract.py  http_request_provider.py  vacancy_provider.py
coursework_5-main/src/data_managers/: db_creator_pg.py  db_manager_postgres.py
coursework_5-main/src/entities/: currency.py  salary.py  vacancy.py
coursework_5-main/src/providers/: currency_provider_cbr.py  http_request_provider_base.py  vacancy_composer.py  vacancy_provider_hh.py
coursework_5-main/src/utils/: console_color.py
coursework_5-main/src/utils/interaction/: search_local.py  search_online.py  utils.py
